--- a/index.html
+++ b/index.html
@@ -241,17 +241,13 @@
 <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-database-compat.js"></script>
 
 <script>
-/************************************************************
- *  1) CONFIGURAR O FIREBASE AQUI:
- ************************************************************/
 const firebaseConfig = {
-  apiKey: "SUA_API_KEY",
-  authDomain: "SEU_PROJETO.firebaseapp.com",
-  databaseURL: "https://SEU_PROJETO.firebaseio.com",
-  projectId: "SEU_PROJETO",
-  storageBucket: "SEU_PROJETO.appspot.com",
-  messagingSenderId: "1234567890",
-  appId: "SUA_APP_ID"
+  apiKey: "AIzaSyCEKt94I164HQG5C8hypgFDqnfU0sztBZo",
+  authDomain: "sampleapp-7d986.firebaseapp.com",
+  projectId: "sampleapp-7d986",
+  storageBucket: "sampleapp-7d986.firebasestorage.app",
+  messagingSenderId: "747030699327",
+  appId: "1:747030699327:web:752a57da0289692e17c78a"
 };
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
